--- a/themes/blackburn/layouts/_default/single.html
+++ b/themes/blackburn/layouts/_default/single.html
@@ -1,8 +1,8 @@
 {{ partial "header.html" . }}
 
 <div class="header">
-  <h1>{{ .Title }}</h1>
-  <h2>{{ .Description }}</h2>
+  <h1 class="myheader">{{ .Title }}</h1>
+  <h2 class="myheader">{{ .Description }}</h2>
 </div>
 <div class="content">
   {{ .Content }}
