--- a/themes/blackburn/layouts/index.html
+++ b/themes/blackburn/layouts/index.html
@@ -1,8 +1,7 @@
 {{ partial "header.html" . }}
 
 <div class="header">
-  <h1>{{ .Title }}</h1>
-  <h2>{{ .Site.Params.subtitle }}</h2>
+  <h2 class="myheader">{{ .Site.Params.subtitle }}</h2>
 </div>
 
 <div class="content">
