--- a/themes/blackburn/layouts/post/single.html
+++ b/themes/blackburn/layouts/post/single.html
@@ -1,21 +1,21 @@
 {{ partial "header.html" . }}
 
 <div class="header">
-  <h1>{{ .Title }}</h1>
-  <h2>{{ .Description }}</h2>
+  <h1 class="myheader">{{ .Title }}</h1>
+  <h2 class="myheader">{{ .Description }}</h2>
 </div>
 <div class="content">
 
   {{ partial "post_meta.html" . }}
 
   {{ .Content }}
-  
+
   {{ partial "share.html" . }}
 
   {{ partial "prev_next_post.html" . }}
-  
+
   {{ partial "commento.html" . }}
-  
+
   {{ partial "disqus.html" . }}
 
   {{ partial "telegram.html" . }}
