--- a/themes/blackburn/layouts/_default/summary.html
+++ b/themes/blackburn/layouts/_default/summary.html
@@ -1,12 +1,19 @@
 <article>
+  <div style="float:left;width:30%;">
+    <img src={{.Params.header}}  width="100%" />
+  </div>
+  <div style="float:right;width:70%;">
+
   <header>
-    <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
 
     {{ partial "post_meta.html" . }}
 
   </header>
 
+  <h2 class="myheader"><a href="{{ .Permalink }}">{{ .Title }}</a></h1>
+
   <p>
+
   {{ .Summary }}
   </p>
 
@@ -15,4 +22,6 @@
     <a href="{{ .RelPermalink }}">Read more<i class="fa fa-angle-double-right fa-fw"></i></a>
   </footer>
   {{ end }}
+
+  </div>
 </article>
